# url-shortener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-local-db.yml  docker-compose.yml  url-shortener.http
.github/workflows/: prod.yml
.sqlx/: query-65b46f6fba8d7fb4d9f45999d7a597d22153273e2c9a012c29b5a8a68e3e429b.json  query-6b7fe53071b6d076fc88614e51b305990dd2ae01e4b04b7e6ff3984a6b20e59a.json  query-a2bb695ad20f731c938ab9b9b902a0106218d186043a694756b77570f98c730a.json  query-b90dd324271193c87e730ca43675cbc99a078af94d7520b50d33ed4c7a535c2e.json
migrations/: 20250110162941_links.up.sql  20250117095043_link_statistics.up.sql  20250117101413_settings.up.sql
src/: auth.rs  main.rs  routes.rs  utils.rs
