[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-prometheus = "0.9.0"
base64 = "0.22.1"
dotenv = "0.15.0"
metrics = "0.24.2"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
