[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
axum-prometheus = "0.10.0"
base64 = "0.22.1"
dotenv = "0.15.0"
hex = "0.4.3"
metrics = "0.24.5"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
